--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "npm run unit",
     "unit": "faucet",
     "lint": "eslint .",
-    "coverage": "istanbul cover --include-all-sources tape test/*.test.js"
+    "coverage": "istanbul cover --include-all-sources tape test/*.test.js",
+    "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
+    "travis": "npm run coverage && npm run coveralls"
   },
   "author": "Shaun Burdick <github@shaunburdick.com>",
   "homepage": "http://github.com/shaunburdick/slack-rpg",
