--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "babel-eslint": "^4.1.6",
     "blue-tape": "^0.1.11",
+    "coveralls": "^2.11.6",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^2.1.1",
     "faucet": "0.0.1"
