--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "unit": "faucet",
     "lint": "eslint .",
     "coverage": "istanbul cover --include-all-sources tape test/*.test.js",
-    "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
-    "travis": "npm run coverage && npm run coveralls"
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "travis": "npm run lint && npm run coverage && npm run coveralls"
   },
   "author": "Shaun Burdick <github@shaunburdick.com>",
   "homepage": "http://github.com/shaunburdick/slack-rpg",
@@ -25,20 +25,19 @@
   },
   "dependencies": {
     "adm-zip": "^0.4.7",
-    "botkit": "0.0.4",
+    "botkit": "0.0.5",
     "istanbul": "^0.4.1",
-    "moment": "^2.10.3",
+    "moment": "^2.11.1",
     "redact-object": "^1.0.1",
     "request": "^2.67.0",
-    "slack-rpg-addon-validator": "^1.0.4",
+    "slack-rpg-addon-validator": "^1.1.1",
     "winston": "^2.1.1"
   },
   "devDependencies": {
-    "babel-eslint": "^4.1.6",
     "blue-tape": "^0.1.11",
     "coveralls": "^2.11.6",
     "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^2.1.1",
+    "eslint-config-airbnb": "^3.1.0",
     "faucet": "0.0.1"
   }
 }
